# quantum-inspired-kernel-optimization

./: .gitignore  QGA.ipynb  QGA.py  README.md  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb  analysis.py  dopnet_analysis.ipynb  example.ipynb
src/: dopnet_loader.py  enums.py  feature_extractor.py  preprocessor.py  qga.py  utils.py
