[project]
name = "quantum-kernel-opt"
version = "0.1.0"
dependencies = [
    "numpy==2.3.1",
    "matplotlib==3.10.7",
    "scipy==1.16.3",
    "scikit-learn==1.7.2",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    ""seaborn>=0.13"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
